<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (C) 2017 Michel A. MacDonald

  MODIFIED FROM SOURCE CODE RELEASED BY Android Open Source Project UNDER
  THE SAME LICENSE

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->
<!--
  Copyright (C) 2014 The Android Open Source Project

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->
<resources>

    <string name="app_name">Patchy AMP</string>
    <string name="browse_albums">Albums</string>
    <string name="browse_albums_subtitle">Songs by album</string>
    <string name="browse_artists">Artists</string>
    <string name="browse_artists_all_songs">All songs</string>
    <string name="browse_artists_all_songs_subtitle">All songs by artist</string>
    <string name="browse_artists_subtitle">Albums by artist</string>
    <string name="browse_genres">Genres</string>
    <string name="browse_genre_subtitle">Songs by genre</string>
    <string name="browse_musics_by_genre_subtitle">%1$s songs</string>
    <string name="casting_to_device">Casting to %1$s</string>
    <string name="close">Close</string>
    <string name="connection_caption">Choose</string>
    <string name="connect_button">Log in</string>
    <string name="currently_playing_song">Song currently playing</string>
    <string name="currently_playing_artist">Artist of currently playing song</string>
    <string name="currently_playing_extra_info">Extra info for currently playing song</string>
    <string name="error_no_metadata">Unable to retrieve metadata.</string>
    <string name="error_no_connection">Cannot connect to server. Please, check your Internet connectivity.</string>
    <string name="error_loading_media">Error Loading Media</string>
    <string name="favorite">Favorite</string>
    <string name="intro_dont_show">Don\'t show again</string>
    <string name="intro_text">Please refer to &lt;a href="https://github.com/antlersoft/patchyamp"&gt;PatchyAmp on github&lt;/a&gt; for help and more information</string>
    <string name="intro_title">Welcome to Patchy AMP</string>
    <string name="intro_version_text">This is early beta software.  Crashes are to be expected, and many changes should be forthcoming in the next few weeks.</string>
    <string name="keep_password_button">Keep</string>
    <string name="nickname_caption">Server nickname</string>
    <string name="open_doc">Go to github page</string>
    <string name="password_caption">Server password</string>
    <string name="random_queue_title">Random music</string>
    <string name="play_item">Play item</string>
    <string name="play_pause">play or pause</string>
    <string name="skip_next">skip to next</string>
    <string name="skip_prev">skip to previous</string>
    <string name="touch_to_cast">Touch to connect to a Google Cast device</string>
    <!-- Use the default receiver. To customize a styled media receiver, you can use
         the css and images under <project-root>/docs/cast_styled_receiver -->
    <string name="url_caption">Ampache URL</string>
    <string name="username_caption">Ampache User</string>
    <string name="username_hint">admin</string>
    <string name="cast_application_id">CC1AD845</string>
    <string name="home_title">Home</string>
    <string name="related_content_header">You may also like</string>
    <string name="action_listen">Listen</string>
    <string name="open_content_drawer">Open the main menu</string>
    <string name="close_content_drawer">Close the main menu</string>
    <string name="placeholder_message">This is a placeholder for your application code.</string>
    <string name="drawer_allmusic_title">All Music</string>
    <string name="drawer_playlists_title">Playlists</string>
    <string name="playlists_subtitle">Get playlists</string>
    <string name="now_playing">Now Playing</string>
    <string name="background_image_str">Background image for album art</string>
    <string name="search_queue_title">Search results</string>
    <string name="no_search_results">No search results.</string>
    <string name="loading">Loading…</string>
    <string name="media_route_menu_title">Play on…</string>
</resources>
