<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:padding="10dip"
	android:orientation="vertical"
		>
	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		>
		<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			>
			<TextView
				android:text="@string/connection_caption"
				android:textAppearance="?android:attr/textAppearanceMedium"
				android:gravity="right|center_vertical"
				android:paddingRight="10dip" 
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				/>
			<Button 
			    android:id="@+id/buttonGO" 
			    android:text="@string/connect_button"
			    android:textAppearance="?android:attr/textAppearanceMedium"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
			/>
		</LinearLayout>
		<Spinner 
		    android:id="@+id/spinnerConnection"
		    android:layout_width="fill_parent"
			android:layout_height="wrap_content"
		/>
	</LinearLayout>
	<ImageView android:layout_width="fill_parent" android:layout_height="wrap_content" android:src="@android:drawable/divider_horizontal_bright"/>
	<ScrollView
		android:layout_height="fill_parent"
		android:layout_width="fill_parent"	
		android:scrollbars="vertical"
		>	
		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:padding="10dip"
			android:orientation="vertical"
			>
			<TableLayout 
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:padding="10dip"
				>
				<TableRow>
					<TextView android:text="@string/nickname_caption" android:paddingRight="10dip" android:gravity="right|center_vertical" android:textAppearance="?android:attr/textAppearanceMedium" />
					<EditText android:id="@+id/textNickname" android:layout_width="fill_parent" android:layout_height="wrap_content" android:singleLine="true" android:layout_weight="1" />
				</TableRow>
				<TableRow>
					<TextView android:text="@string/url_caption" android:hint="http://192.168.1.1/ampache" android:paddingRight="10dip" android:gravity="right|center_vertical" android:textAppearance="?android:attr/textAppearanceMedium" />
					<EditText android:id="@+id/textIP" android:layout_width="fill_parent" android:layout_height="wrap_content" android:singleLine="true" android:layout_weight="1" />
				</TableRow>
				<TableRow>
					<TextView android:text="@string/username_caption" android:paddingRight="10dip" android:gravity="right|center_vertical" android:textAppearance="?android:attr/textAppearanceMedium" />
					<EditText android:layout_width="fill_parent" android:hint="@string/username_hint" android:layout_height="wrap_content" android:singleLine="true" android:layout_weight="1" android:id="@+id/textUsername"/>
				</TableRow>
				<TableRow>
					<TextView android:text="@string/password_caption" android:paddingRight="10dip" android:gravity="right|center_vertical" android:textAppearance="?android:attr/textAppearanceMedium" />
					<LinearLayout
						android:layout_width="fill_parent"
						android:layout_height="wrap_content"
						android:orientation="horizontal"
						android:layout_weight="1"
						>
						<EditText android:id="@+id/textPASSWORD"
							android:password="true"
							android:layout_width="fill_parent" android:layout_height="wrap_content" android:singleLine="true" android:layout_weight="1" />
						<CheckBox android:id="@+id/checkboxKeepPassword"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:text="@string/keep_password_button"
							android:layout_weight="0"
							/>
					</LinearLayout>
				</TableRow>
			</TableLayout>
		</LinearLayout>
	</ScrollView>
</LinearLayout>

